[gd_scene load_steps=3 format=2]

[ext_resource path="res://Waves/TwoTriangles.gd" type="Script" id=1]
[ext_resource path="res://BasicEnemy.tscn" type="PackedScene" id=2]

[node name="Wave" type="Spatial"]

script = ExtResource( 1 )

[node name="BasicEnemy" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 0, 0, 0 )

[node name="BasicEnemy2" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0, 0, 0 )

[node name="BasicEnemy3" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( -0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 0, 0, 0 )

[node name="BasicEnemy4" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, 0 )

[node name="BasicEnemy5" parent="." index="4" instance=ExtResource( 2 )]

transform = Transform( -2.68221e-007, 0, 1, 0, 1, 0, -1, 0, -2.68221e-007, 0, 0, 0 )

[node name="BasicEnemy6" parent="." index="5" instance=ExtResource( 2 )]

transform = Transform( -0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866025, 0, 0, 0 )


